--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage":"https://ayushpokharel98.github.io/happy-birthday/",
+  "homepage": "https://ayushpokharel98.github.io/happy-birthday/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,7 +16,9 @@
     "@tailwindcss/vite": "^4.1.5",
     "framer-motion": "^12.9.4",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
+    "react-use": "^17.6.0",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
